--- a/Image Annotation/Image Annotation using LabelImg.ipynb
+++ b/Image Annotation/Image Annotation using LabelImg.ipynb
@@ -1,76 +1,66 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Image Annotation using LabelImg\n",
+    "### Image Annotation using CVAT\n",
     "<b>Objective:</b>\n",
-    "To annotate a publicly available image dataset (e.g., COCO or Pascal VOC) using LabelImg for object detection tasks.\n",
+    "To annotate a publicly available image dataset using CVAT (Computer Vision Annotation Tool) for object detection tasks.\n",
     " \n",
     "#### Step 1 : Selecting a Dataset\n",
-    " \n",
-    "We need to choose a dataset that is publicly available for image annotation. Some popular choices include:\n",
     "\n",
-    "<b>COCO (Common Objects in Context):</b> Contains images of complex everyday scenes with common objects in their natural contexts.\n",
-    "\n",
-    "<b>Pascal VOC:</b> Includes images from various object classes, including people, animals, and vehicles, with detailed annotations.\n",
+    "For this project, I used a kaggle dataset \"Chess Pieces Detection Images Dataset\" by Anshul Mehta. This data set contains images of chess pieces like the queen, bishop etc. As this dataset contains 651 images, it is quite time consuming for me to label all of them so I took a subset of the images randomly containing 50 images. This is enough for me to gain proper understanding of the Annotation process.\n",
     "\n",
     "\n",
-    " For this project, I chose the Pascal VOC dataset, which includes a variety of objects such as people, cars, and animals. The dataset is commonly used in object detection tasks, making it a suitable choice for this project. The diversity of objects allows for the demonstration of various annotation challenges.\n",
+    "#### Step 2 : Setting Up CVAT\n",
     "\n",
+    "CVAT (Computer Vision Annotation Tool) is a free, open-source web-based tool for annotating images and videos for computer vision tasks. It's more modern and feature-rich compared to desktop alternatives, offering better compatibility across different operating systems and architectures.\n",
     "\n",
-    "#### Step 2 : Install and Set Up LabelImg\n",
+    "To get started with CVAT:\n",
     "\n",
-    "LabelImg is a free, open-source software program for labeling images using graphs. The software was released by Tzutalin in 2015 and written in Python; using QT for its GI (graphical interface). LabelImg is a straightforward and basic tool to label a few hundred images to create a dataset for computer vision model training.\n",
+    "1. Visit https://cvat.org and create a free account\n",
+    "2. Log in to your account\n",
+    "3. Create a new project for chess piece annotation\n",
     "\n",
+    "#### Step 3: Creating YOLO Format Annotations with CVAT\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: labelImg in /Users/vaishnavipullakhandam/anaconda3/lib/python3.10/site-packages (1.8.6)\n",
-      "Requirement already satisfied: lxml in /Users/vaishnavipullakhandam/anaconda3/lib/python3.10/site-packages (from labelImg) (4.9.1)\n",
-      "Requirement already satisfied: pyqt5 in /Users/vaishnavipullakhandam/anaconda3/lib/python3.10/site-packages (from labelImg) (5.15.11)\n",
-      "Requirement already satisfied: PyQt5-sip<13,>=12.15 in /Users/vaishnavipullakhandam/anaconda3/lib/python3.10/site-packages (from pyqt5->labelImg) (12.17.0)\n",
-      "Requirement already satisfied: PyQt5-Qt5<5.16.0,>=5.15.2 in /Users/vaishnavipullakhandam/anaconda3/lib/python3.10/site-packages (from pyqt5->labelImg) (5.15.16)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Use the following commands to install LabelImg:\n",
-    "! pip install labelImg\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'labelImg' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Launch the tool:\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m labelImg\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'labelImg' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Launch the tool:\n",
-    "labelImg\n"
+    "YOLO (You Only Look Once) is one of the most popular object detection models, and CVAT allows you to export annotations in the YOLO format.\n",
+    "\n",
+    "Setting up your task:\n",
+    "\n",
+    "1. Click on 'Create new task'\n",
+    "2. Upload your selected 50 chess piece images\n",
+    "3. Set up labels for different chess pieces (queen, bishop, pawn, etc.)\n",
+    "4. Select 'Rectangle' as the annotation shape for bounding boxes\n",
+    "\n",
+    "Annotating Images:\n",
+    "\n",
+    "1. Open the task and start annotating\n",
+    "2. For each image:\n",
+    "   - Draw bounding boxes around chess pieces using the rectangle tool\n",
+    "   - Select the appropriate label for each box (e.g., \"queen,\" \"bishop,\" \"pawn\")\n",
+    "   - Use keyboard shortcuts (W for creating a box, N for next image) to speed up annotation\n",
+    "3. Save your progress regularly\n",
+    "\n",
+    "Exporting Annotations:\n",
+    "\n",
+    "1. Once finished, click on 'Menu' → 'Export task dataset'\n",
+    "2. Select 'YOLO' as the export format\n",
+    "3. Download the exported annotations\n",
+    "\n",
+    "The exported package will contain:\n",
+    "- A `obj.names` file listing all your classes\n",
+    "- `.txt` files for each image with YOLO format annotations\n",
+    "- A `train.txt` file listing all image paths\n",
+    "\n",
+    "CVAT Advantages:\n",
+    "- Web-based: No installation or compatibility issues\n",
+    "- Modern interface with better UX\n",
+    "- Collaborative features for team projects\n",
+    "- Multiple export formats supported\n",
+    "- Built-in quality control tools\n",
+    "- Regular backups of your annotations"
    ]
   }
  ],
