updated the notebook

--- a/Image Annotation/Image Annotation using LabelImg.ipynb
+++ b/Image Annotation/Image Annotation using LabelImg.ipynb
@@ -62,6 +62,88 @@
     "- Built-in quality control tools\n",
     "- Regular backups of your annotations"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image Annotation using CVAT\n",
+    "<b>Objective:</b>\n",
+    "To annotate a publicly available image dataset using CVAT (Computer Vision Annotation Tool) for object detection tasks.\n",
+    " \n",
+    "#### Step 1: Selecting a Dataset\n",
+    "\n",
+    "For this project, I used a kaggle dataset \"Chess Pieces Detection Images Dataset\" by Anshul Mehta. This data set contains images of chess pieces like the queen, bishop etc. As this dataset contains 651 images, it is quite time consuming for me to label all of them so I took a subset of the images randomly containing 50 images. This is enough for me to gain proper understanding of the Annotation process.\n",
+    "\n",
+    "#### Step 2: Setting Up CVAT and Project Structure\n",
+    "\n",
+    "CVAT (Computer Vision Annotation Tool) is a free, open-source web-based tool for annotating images and videos for computer vision tasks. I organized my annotation project as follows:\n",
+    "\n",
+    "1. Created a CVAT account at https://cvat.org\n",
+    "2. Set up a project with the following chess piece labels:\n",
+    "   - Queen (color: #80765d)\n",
+    "   - Bishop (color: #fdd8e4)\n",
+    "   - Rook (color: #b3ed40)\n",
+    "   - Knight (color: #f304d8)\n",
+    "   - Pawn (color: #83e070)\n",
+    "\n",
+    "Project Structure:\n",
+    "Image Annotation/\n",
+    "├── annotation_yolo/ # YOLO format annotations\n",
+    "│ ├── obj_train_data/ # Contains image-specific annotations\n",
+    "│ ├── train.txt # List of image paths\n",
+    "│ ├── obj.data # Dataset configuration\n",
+    "│ └── obj.names # Class names\n",
+    "├── annotations.xml # CVAT export in XML format\n",
+    "└── annotation_example.png # Example of annotated image\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Step 3: Annotation Process in CVAT\n",
+    "\n",
+    "1. Image Upload and Task Creation:\n",
+    "   - Created a new task in CVAT\n",
+    "   - Uploaded the selected chess piece images\n",
+    "   - Configured rectangle shape for bounding boxes\n",
+    "\n",
+    "2. Annotation Guidelines:\n",
+    "   - Drew bounding boxes around each chess piece\n",
+    "   - Labeled each piece according to its type (Queen, Bishop, Rook, Knight, Pawn)\n",
+    "   - Used keyboard shortcuts for efficient annotation:\n",
+    "     - W: Create a box\n",
+    "     - N: Next image\n",
+    "     - Ctrl+S: Save progress\n",
+    "\n",
+    "3. Quality Control:\n",
+    "   - Reviewed annotations for accuracy\n",
+    "   - Ensured consistent bounding box sizes\n",
+    "   - Verified correct label assignments\n",
+    "\n",
+    "#### Step 4: Exporting Annotations\n",
+    "\n",
+    "1. CVAT Export:\n",
+    "   - Generated XML format (annotations.xml)\n",
+    "   - Contains detailed metadata including:\n",
+    "     - Image dimensions\n",
+    "     - Bounding box coordinates\n",
+    "     - Label information\n",
+    "     - Creation timestamps\n",
+    "\n",
+    "2. YOLO Format:\n",
+    "   - Exported annotations in YOLO format containing:\n",
+    "     - obj.names: List of class names (Queen, Bishop, Rook, Knight, Pawn)\n",
+    "     - obj.data: Configuration file with class count and paths\n",
+    "     - obj_train_data/: Directory with per-image annotations\n",
+    "     - train.txt: List of image paths for training\n",
+    "\n",
+    "#### Results and Verification\n",
+    "\n",
+    "- Successfully annotated the chess piece dataset\n",
+    "- Generated both XML and YOLO format annotations\n",
+    "- Created example visualizations (annotation_example.png)\n",
+    "- Organized annotations in a structured directory format\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
